Added normal and geography list endpoints according to the PR review
